# agent-testing2

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  package-lock.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.opencode/: README.md  environments.schema.json
.opencode/agent/: backend-reviewer.md  basic-design-reviewer.md  basic-design-writer.md  container-worker.md  database-reviewer.md  detailed-design-reviewer.md  detailed-design-writer.md  frontend-reviewer.md  infra-reviewer.md  req-reviewer.md  req-writer.md  security-reviewer.md  test-spec-writer.md
.opencode/command/: basic-design-workflow.md  detailed-design-workflow.md  implement-issues.md  req-workflow.md  request-design-fix.md  tech-catchup-workflow.md
.opencode/instructions/: container-use.md
.opencode/skill/: cc-wf-studio-schema.md  code-quality-rules.md  container-use-guide.md  design-document-types.md  handover-process.md  infra-workflow.md  iterative-review.md  review-guidelines.md
.opencode/templates/: mockup-base.html  screen-design-template.md
.opencode/templates/designs/: async.md  backend.md  bff.md  cicd.md  container.md  database.md  detailed-index.md  external-api.md  frontend.md  infra.md  notification.md  readme.md  screen.md
.opencode/templates/research/: tech-report.md
.serena/: project.yml
docs/: FOCUS_MODE_SETUP.md  INSTALL.md  MANUAL_TEST_CHECKLIST.md  TROUBLESHOOTING.md  USAGE.md
docs/designs/basic/: BASIC-CLI-001_pomodoro-timer.md
docs/designs/detailed/pomodoro-timer/: README.md  cli-client.md  daemon-server.md  focus-mode.md  infrastructure.md  issue-plan.md  (+5 more)
docs/requirements/: REQ-CLI-001_pomodoro-timer.md
docs/research/: TECH-BE-001_tokio.md  TECH-INFRA-001_LaunchAgents.md  TECH-TOOL-001_clap.md  TECH-TOOL-002_objc2.md  TECH-TOOL-003_ui-audio-tray.md
src/: lib.rs  main.rs
src/cli/: client.rs  commands.rs  display.rs  mod.rs
src/daemon/: ipc.rs  mod.rs  timer.rs
src/focus/: config.rs  error.rs  mod.rs  shortcuts.rs
src/launchagent/: error.rs  launchctl.rs  mod.rs  plist.rs  status.rs
src/menubar/: event.rs  icon.rs  menu.rs  mod.rs
src/notification/: actions.rs  center.rs  content.rs  delegate.rs  error.rs  mod.rs  request.rs
src/sound/: embedded.rs  error.rs  mod.rs  player.rs  source.rs
src/types/: mod.rs
tests/: component_integration_tests.rs  e2e_tests.rs  integration_tests.rs  performance_tests.rs
