[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Pomodoro Timer Team"]
description = "A macOS-native Pomodoro timer CLI tool"
license = "MIT"
repository = "https://github.com/takemo101/agent-testing2"
keywords = ["pomodoro", "timer", "cli", "macos"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["rt", "time", "macros", "signal", "sync"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
