[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Pomodoro Timer Team"]
description = "A macOS-native Pomodoro timer CLI tool"
license = "MIT"
repository = "https://github.com/takemo101/agent-testing2"
keywords = ["pomodoro", "timer", "cli", "macos"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["rt", "time", "macros", "signal", "sync", "net", "io-util"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation (for notification request IDs)
uuid = { version = "1.11", features = ["v4"] }

# macOS-specific dependencies for notification system
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSSet", "NSArray"] }
# Use default features - includes all notification types we need
objc2-user-notifications = "0.3"

# Menu bar UI (tray icon) - macOS native
tray-icon = "0.21"
muda = "0.18"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
